--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@editorjs/editorjs": "2.29.1",
+    "@editorjs/code": "^2.9.0",
+    "@editorjs/list": "^1.9.0",
+    "@editorjs/table": "^2.3.0",
+    "@tiptap/extension-color": "^2.3.1",
+    "@tiptap/extension-text-style": "^2.3.1",
+    "@tiptap/pm": "^2.3.1",
+    "@tiptap/react": "^2.3.1",
+    "@tiptap/starter-kit": "^2.3.1",
+    "editorjs-text-color-plugin": "^2.0.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-editor-js": "2.1.0",
     "reflect-metadata": "0.2.2",
     "tsyringe": "4.8.0"
   },
